--- a/package.json
+++ b/package.json
@@ -7,21 +7,32 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tauri": "tauri",
+    "update-builds": "node scripts/update-builds.cjs",
+    "build:win": "npm run build && npm run tauri build",
+    "build:android": "npm run build && npm run tauri android build -- --apk true",
+    "build:all": "npm run build:win && npm run build:android && npm run update-builds"
   },
   "dependencies": {
-    "@types/react-router-dom": "^5.3.3",
+    "@tauri-apps/api": "^2.9.1",
+    "@types/three": "^0.182.0",
     "@types/uuid": "^10.0.0",
     "firebase": "^12.8.0",
+    "framer-motion": "^12.29.2",
+    "gsap": "^3.14.2",
+    "motion": "^12.29.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-easy-crop": "^5.5.6",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.13.0",
+    "three": "^0.182.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@tauri-apps/cli": "^2.9.6",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
