--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,6 +14,13 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 
 [dependencies]
 tauri = { version = "2.0.0", features = [] }
+tauri-plugin-updater = "2.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 # tauri-plugin-shell = "2.0.0" # Add if shell is needed
+
+[profile.release]
+lto = false
+codegen-units = 1
+panic = "abort"
+strip = true
