--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sesli_konusma",
   "private": true,
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -15,7 +15,8 @@
     "build:all": "npm run build:win && npm run build:android && npm run update-builds"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2.9.1",
+    "@tauri-apps/api": "^2.10.1",
+    "@tauri-apps/plugin-shell": "^2.3.5",
     "@types/three": "^0.182.0",
     "@types/uuid": "^10.0.0",
     "firebase": "^12.8.0",
