--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,7 +17,7 @@ tauri = { version = "2.0.0", features = [] }
 tauri-plugin-updater = "2.0.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-# tauri-plugin-shell = "2.0.0" # Add if shell is needed
+tauri-plugin-shell = "2.2"
 
 [profile.release]
 lto = false
